// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CD enabled CD stage form READONLY mode: disabled CD stage 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main container"
    >
      <div
        class="Layout--vertical StyledProps--main"
      >
        <div
          id="Stage.testCdStage1"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-top-medium StyledProps--padding-left-large"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black100 StyledProps--font-weight-semi-bold"
            >
              Stage: 
              testCdStage1
            </p>
          </div>
          <div
            class="topAccordion"
          />
        </div>
      </div>
      <div
        class="Layout--vertical StyledProps--main"
      >
        <div
          id="Stage.parallelStage1"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-top-medium StyledProps--padding-left-large"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black100 StyledProps--font-weight-semi-bold"
            >
              Stage: 
              parallelStage1
            </p>
          </div>
          <div
            class="topAccordion"
          />
        </div>
      </div>
      <div
        class="Layout--vertical StyledProps--main"
      >
        <div
          id="Stage.parallelStage2"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-top-medium StyledProps--padding-left-large"
          >
            <p
              class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black100 StyledProps--font-weight-semi-bold"
            >
              Stage: 
              parallelStage2
            </p>
          </div>
          <div
            class="topAccordion"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CI enabled CI READONLY mode: CI stage readonly mode 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main container"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-top-medium StyledProps--padding-left-large"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black100 StyledProps--font-weight-semi-bold"
          data-name="ci-codebase-title"
        >
          ciCodebase
        </p>
      </div>
      <div
        class="topAccordion"
      >
        <div
          class="accordionSummary"
        >
          <div
            class="nestedAccordions"
            style="width: 50%;"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-huge StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-start StyledProps--padding-top-small StyledProps--padding-left-xsmall StyledProps--padding-bottom-xsmall StyledProps--margin-left-large"
              >
                <label
                  class="bp3-control bp3-radio bp3-disabled StyledProps--font Radio--radio StyledProps--main StyledProps--font-variation-form-label"
                >
                  <input
                    disabled=""
                    type="radio"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  gitBranch
                </label>
                <label
                  class="bp3-control bp3-radio bp3-disabled StyledProps--font Radio--radio StyledProps--main StyledProps--font-variation-form-label"
                >
                  <input
                    disabled=""
                    type="radio"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  gitTag
                </label>
                <label
                  class="bp3-control bp3-radio bp3-disabled StyledProps--font Radio--radio StyledProps--main StyledProps--font-variation-form-label"
                >
                  <input
                    disabled=""
                    type="radio"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  pipeline.gitPullRequest
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CI enabled CI present in one of the stages: CI codebase input set form 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main container"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-top-medium StyledProps--padding-left-large"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black100 StyledProps--font-weight-semi-bold"
          data-name="ci-codebase-title"
        >
          ciCodebase
        </p>
      </div>
      <div
        class="topAccordion"
      >
        <div
          class="accordionSummary"
        >
          <div
            class="nestedAccordions"
            style="width: 50%;"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-huge StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-start StyledProps--padding-top-small StyledProps--padding-left-xsmall StyledProps--padding-bottom-xsmall StyledProps--margin-left-large"
              >
                <label
                  class="bp3-control bp3-radio StyledProps--font Radio--radio StyledProps--main StyledProps--font-variation-form-label"
                >
                  <input
                    type="radio"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  gitBranch
                </label>
                <label
                  class="bp3-control bp3-radio StyledProps--font Radio--radio StyledProps--main StyledProps--font-variation-form-label"
                >
                  <input
                    type="radio"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  gitTag
                </label>
                <label
                  class="bp3-control bp3-radio StyledProps--font Radio--radio StyledProps--main StyledProps--font-variation-form-label"
                >
                  <input
                    type="radio"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  pipeline.gitPullRequest
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CI enabled PR Number build radio option should not be visible for CodeCommit type connector: PR Number build radio option should not be visible for CodeCommit type connector 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-medium StyledProps--main container"
    >
      <div
        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--padding-top-medium StyledProps--padding-left-large"
      >
        <p
          class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black100 StyledProps--font-weight-semi-bold"
          data-name="ci-codebase-title"
        >
          ciCodebase
        </p>
      </div>
      <div
        class="topAccordion"
      >
        <div
          class="accordionSummary"
        >
          <div
            class="nestedAccordions"
            style="width: 50%;"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-small StyledProps--main"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-huge StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-start StyledProps--padding-top-small StyledProps--padding-left-xsmall StyledProps--padding-bottom-xsmall StyledProps--margin-left-large"
              >
                <label
                  class="bp3-control bp3-radio bp3-disabled StyledProps--font Radio--radio StyledProps--main StyledProps--font-variation-form-label"
                >
                  <input
                    disabled=""
                    type="radio"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  gitBranch
                </label>
                <label
                  class="bp3-control bp3-radio bp3-disabled StyledProps--font Radio--radio StyledProps--main StyledProps--font-variation-form-label"
                >
                  <input
                    disabled=""
                    type="radio"
                  />
                  <span
                    class="bp3-control-indicator"
                  />
                  gitTag
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
